[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/GodotGamePad/LayoutConfiguration/DropDownContainer/CenterOptions/CenterOptions.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.517647, 0.388235, 0.388235, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.54902, 0.564706, 0.596078, 1 )

[node name="PanelContainer" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 1.0
margin_top = 1.0
margin_right = 1023.0
margin_bottom = 599.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
margin_right = 1022.0
margin_bottom = 14.0
text = "Options"
align = 1
uppercase = true

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 1022.0
margin_bottom = 70.0
custom_constants/hseparation = 10
columns = 2

[node name="WidthLabel" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 5.0
margin_right = 506.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Buttons Width"

[node name="WidthSpinBox" type="SpinBox" parent="VBoxContainer/GridContainer"]
margin_left = 516.0
margin_right = 1022.0
margin_bottom = 24.0
size_flags_horizontal = 3
step = 2.0
rounded = true
allow_greater = true

[node name="SepLabel" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 33.0
margin_right = 506.0
margin_bottom = 47.0
size_flags_horizontal = 3
text = "Buttons Separation"

[node name="SeparationSpinBox" type="SpinBox" parent="VBoxContainer/GridContainer"]
margin_left = 516.0
margin_top = 28.0
margin_right = 1022.0
margin_bottom = 52.0
step = 2.0
rounded = true
allow_greater = true

[connection signal="value_changed" from="VBoxContainer/GridContainer/WidthSpinBox" to="." method="_on_WidthSpinBox_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/SeparationSpinBox" to="." method="_on_SeparationSpinBox_value_changed"]
